# Tachyon-Setup

./: .gitignore  Cargo.toml  LICENSE  README.md
TachyonSetup/: .gitignore  Cargo.toml  build.rs  tachyon_setup.exe.manifest  tachyon_setup.rc
TachyonSetup/assets/: 24H2 FIX.txt
TachyonSetup/src/: error.rs  file_service.rs  main.rs  process_service.rs  registry_service.rs  worker.rs
TachyonSetup/src/adapter/: bin_patcher.rs  bin_patcher_error.rs  mod.rs
crates/setup-core/: Cargo.toml
crates/setup-core/src/: error.rs  file_service.rs  lib.rs  process_service.rs  registry_service.rs
crates/tachyon-installer/: Cargo.toml  build.rs  tachyon_installer.exe.manifest  tachyon_installer.rc
crates/tachyon-installer/src/: install_service.rs  main.rs  ui.rs  worker.rs
crates/tachyon-uninstaller/: Cargo.toml  build.rs  tachyon_uninstaller.exe.manifest  tachyon_uninstaller.rc
crates/tachyon-uninstaller/src/: main.rs  self_delete.rs  ui.rs  worker.rs
design/: Tachyon-Uninstaller-Banner.af  Tachyon-Wizard-Banner.af
