[workspace]
resolver = "2"
members = [
    "crates/setup-core",
    "crates/tachyon-uninstaller",
    "crates/tachyon-installer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
thiserror = "1.0.50"
registry = "1.2.3"
utfx = "0.1.0"
directories = "6.0.0"
lazy_static = "1.5.0"
lazy-static-include = "3.2.1"
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"
winapi = { version = "0.3", features = ["winuser", "wingdi", "windef", "minwindef", "tlhelp32", "handleapi"] }
winres = "0.1.12"
embed-resource = "2.4.0"
