[package]
name = "tachyon_setup"
version = "0.1.0"
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"
registry = "1.2.3"
utfx = "0.1.0"
thiserror = "1.0.50"
winres = "0.1.12"

[build-dependencies]
embed-resource = "2.4.0"